--- a/shop.html
+++ b/shop.html
@@ -36,8 +36,8 @@
     <!-- SHOP HERO -->
     <section class="shop-hero">
         <div class="container">
-            <h1>Our Amazing Products</h1>
-            <p>Fun, creative, brain-boosting activities for every child</p>
+            <h1>🎉 Our Amazing Kids' Adventures!</h1>
+            <p>Fun, creative, brain-boosting activities for every little explorer 🌟</p>
         </div>
     </section>
 
@@ -45,7 +45,7 @@
     <section class="shop-filters">
         <div class="container">
             <div class="filters-wrapper">
-                <h3 class="filter-label">Filter by Category</h3>
+                <h3 class="filter-label">✨ Pick Your Adventure!</h3>
                 <div class="filter-buttons" role="tablist" aria-label="Product Categories">
                     <button class="filter-btn active" data-category="all" role="tab" aria-selected="true" aria-controls="all-products">
                         <span class="filter-icon">📦</span>
@@ -87,10 +87,10 @@
                         <div class="product-image">
                             <i class="fas fa-palette"></i>
                         </div>
-                        <h3>Colouring 1</h3>
-                        <p class="product-description">Fun colouring activities to spark creativity</p>
+                        <h3>🖍 Colouring 1</h3>
+                        <p class="product-description">Spark your imagination with colorful fun!</p>
                         <div class="product-price">RM 5.00</div>
-                        <a href="https://toyyibpay.com/Colouring-1-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Colouring-1-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Let's Play! 🎉</a>
                     </div>
 
                     <!-- Product 2 -->
@@ -98,10 +98,10 @@
                         <div class="product-image">
                             <i class="fas fa-paint-brush"></i>
                         </div>
-                        <h3>Colouring Bundle</h3>
-                        <p class="product-description">Multiple colouring sets at a great price</p>
+                        <h3>🎨 Colouring Bundle</h3>
+                        <p class="product-description">A rainbow of coloring adventures in one set!</p>
                         <div class="product-price">RM 8.00</div>
-                        <a href="https://toyyibpay.com/Colouring-Bundle-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Colouring-Bundle-TFK" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
 
                     <!-- Product 3 -->
@@ -109,10 +109,10 @@
                         <div class="product-image">
                             <i class="fas fa-layer-group"></i>
                         </div>
-                        <h3>Kids Origami</h3>
-                        <p class="product-description">Paper folding fun that develops motor skills</p>
+                        <h3>✂️ Kids Origami</h3>
+                        <p class="product-description">Fold, twist, and make magic with paper!</p>
                         <div class="product-price">RM 5.00</div>
-                        <a href="https://toyyibpay.com/Colouring-Bundle-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Colouring-Bundle-TFK" target="_blank" class="btn btn-primary">Adventure Awaits! 🌟</a>
                     </div>
 
                     <!-- Product 4 -->
@@ -120,10 +120,10 @@
                         <div class="product-image">
                             <i class="fas fa-th"></i>
                         </div>
-                        <h3>Sudoku</h3>
-                        <p class="product-description">Brain-teasing puzzles for logic builders</p>
+                        <h3>🧠 Sudoku</h3>
+                        <p class="product-description">Brain-teasing fun for little logic heroes!</p>
                         <div class="product-price">RM 5.00</div>
-                        <a href="https://toyyibpay.com/SODUKU-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/SODUKU-TFK" target="_blank" class="btn btn-primary">Let's Play! 🎉</a>
                     </div>
 
                     <!-- Product 5 -->
@@ -131,10 +131,10 @@
                         <div class="product-image">
                             <i class="fas fa-puzzle-piece"></i>
                         </div>
-                        <h3>Maze WS + Sudoku</h3>
-                        <p class="product-description">Combine maze challenges with sudoku puzzles</p>
+                        <h3>🔀 Maze + Sudoku</h3>
+                        <p class="product-description">Double the challenge, double the fun!</p>
                         <div class="product-price">RM 8.00</div>
-                        <a href="https://toyyibpay.com/SODUKU-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/SODUKU-TFK" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
 
                     <!-- Product 6 -->
@@ -142,10 +142,10 @@
                         <div class="product-image">
                             <i class="fas fa-film"></i>
                         </div>
-                        <h3>Animation Quiz</h3>
-                        <p class="product-description">Learn with fun animated quiz activities</p>
+                        <h3>🎬 Animation Quiz</h3>
+                        <p class="product-description">Learn and laugh with animated quizzes!</p>
                         <div class="product-price">RM 5.00</div>
-                        <a href="https://toyyibpay.com/Animation-Quiz-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Animation-Quiz-TFK" target="_blank" class="btn btn-primary">Adventure Awaits! 🌟</a>
                     </div>
 
                     <!-- Product 7 -->
@@ -153,10 +153,10 @@
                         <div class="product-image">
                             <i class="fas fa-scroll"></i>
                         </div>
-                        <h3>Worksheet</h3>
-                        <p class="product-description">Comprehensive worksheets for skill building</p>
+                        <h3>📄 Worksheet</h3>
+                        <p class="product-description">Fun worksheets that grow skills step by step!</p>
                         <div class="product-price">RM 8.00</div>
-                        <a href="https://toyyibpay.com/Worksheet-RM5-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Worksheet-RM5-TFK" target="_blank" class="btn btn-primary">Let's Play! 🎉</a>
                     </div>
 
                     <!-- Product 8 -->
@@ -164,10 +164,10 @@
                         <div class="product-image">
                             <i class="fas fa-book"></i>
                         </div>
-                        <h3>Flash Card & Journal</h3>
-                        <p class="product-description">Flash cards plus journaling for creative expression</p>
+                        <h3>✍️ Flash Card & Journal</h3>
+                        <p class="product-description">Play, learn, and write your own stories!</p>
                         <div class="product-price">RM 12.88</div>
-                        <a href="https://toyyibpay.com/Flash-Card-Journal-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Flash-Card-Journal-TFK" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
 
                     <!-- Product 9 -->
@@ -175,10 +175,10 @@
                         <div class="product-image">
                             <i class="fas fa-star"></i>
                         </div>
-                        <h3>Mega Bundle</h3>
-                        <p class="product-description">Everything - our complete activity collection!</p>
+                        <h3>✨ Mega Bundle</h3>
+                        <p class="product-description">Everything your kid needs for a creative adventure!</p>
                         <div class="product-price">RM 39.90</div>
-                        <a href="https://toyyibpay.com/Learning-Bundle-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Learning-Bundle-TFK" target="_blank" class="btn btn-primary">Adventure Awaits! 🌟</a>
                     </div>
                 </div>
             </div>
@@ -187,8 +187,8 @@
             <div class="category-section" id="learning-section" data-category="learning">
                 <div class="category-header">
                     <div class="category-header-content">
-                        <h2 class="category-title">📚 Learning Bundle</h2>
-                        <p class="category-description">Complete learning packages with everything included</p>
+                        <h2 class="category-title">📚 Learning Bundles</h2>
+                        <p class="category-description">Complete packages of English, Science, Crafts & more – learning made magical!</p>
                     </div>
                     <img src="images/category-learning.svg" alt="Learning Bundle Products" class="category-image">
                 </div>
@@ -197,18 +197,13 @@
                         <div class="product-image">
                             <i class="fas fa-book-open"></i>
                         </div>
-                        <h3>Learning Bundle</h3>
+                        <h3>📚 Learning Bundle</h3>
                         <p class="product-description">
-                            Complete learning package including:<br>
-                            ✓ English Bundle<br>
-                            ✓ Science Videos<br>
-                            ✓ General Knowledge<br>
-                            ✓ eBook<br>
-                            ✓ Crafts<br>
-                            ✓ Games
+                            Complete packages of English, Science, Crafts & more – learning made magical!<br>
+                            ✅ English • Science • General Knowledge • eBook • Crafts • Games
                         </p>
                         <div class="product-price">RM 29.90</div>
-                        <a href="https://toyyibpay.com/Learning-Bundle-TFK" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Learning-Bundle-TFK" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
                 </div>
             </div>
@@ -217,8 +212,8 @@
             <div class="category-section" id="mommyhana-section" data-category="mommyhana">
                 <div class="category-header">
                     <div class="category-header-content">
-                        <h2 class="category-title">💪 MommyHana Products</h2>
-                        <p class="category-description">Health, wellness and nutrition for the whole family</p>
+                        <h2 class="category-title">💪 Wellness & Nutrition</h2>
+                        <p class="category-description">Healthy, delicious products trusted by parents for growing tots</p>
                     </div>
                     <img src="images/category-mommyhana.svg" alt="MommyHana Products" class="category-image">
                 </div>
@@ -230,10 +225,10 @@
                         <div class="product-image">
                             <img src="images/myfirstbook.jpeg" alt="My First Book" class="product-img">
                         </div>
-                        <h3>My First Book</h3>
-                        <p class="product-description">Your child's first learning adventure</p>
+                        <h3>📖 My First Book</h3>
+                        <p class="product-description">Your child's amazing first learning adventure!</p>
                         <div class="product-price">RM 99.00</div>
-                        <a href="https://toyyibpay.com/MFB-RM99-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/MFB-RM99-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Let's Play! 🎉</a>
                     </div>
 
                     <!-- Product 2 -->
@@ -241,10 +236,10 @@
                         <div class="product-image">
                             <img src="images/excelhana.jpeg" alt="Excel Hana" class="product-img">
                         </div>
-                        <h3>Excel Hana</h3>
-                        <p class="product-description">Excel in everything with this comprehensive guide</p>
+                        <h3>⭐ Excel Hana</h3>
+                        <p class="product-description">Help your child excel in everything they do!</p>
                         <div class="product-price">RM 79.00</div>
-                        <a href="https://toyyibpay.com/Excel-Hana-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Excel-Hana-Thinky-Fun-Kids" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
 
                     <!-- Product 3 -->
@@ -252,10 +247,10 @@
                         <div class="product-image">
                             <img src="images/emmuneboozter.jpeg" alt="Immune Booster" class="product-img">
                         </div>
-                        <h3>Immune Booster</h3>
-                        <p class="product-description">Natural supplement for strong immunity</p>
+                        <h3>💪 Immune Booster</h3>
+                        <p class="product-description">Natural nutrition for strong immunity & healthy growth!</p>
                         <div class="product-price">RM 69.00</div>
-                        <a href="https://toyyibpay.com/Emmune-Booster-RM69" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Emmune-Booster-RM69" target="_blank" class="btn btn-primary">Adventure Awaits! 🌟</a>
                     </div>
 
                     <!-- Product 4 -->
@@ -263,10 +258,10 @@
                         <div class="product-image">
                             <img src="images/susukambingcoklat.jpeg" alt="Susu Kambing Coklat" class="product-img">
                         </div>
-                        <h3>Susu Kambing Coklat</h3>
-                        <p class="product-description">Delicious chocolate goat milk for nutrition</p>
+                        <h3>🍫 Susu Kambing Coklat</h3>
+                        <p class="product-description">Creamy, delicious chocolate goat milk kids adore!</p>
                         <div class="product-price">RM 69.00</div>
-                        <a href="https://toyyibpay.com/Susu-Kambing-Coklat-RM69" target="_blank" class="btn btn-primary">Buy Now</a>
+                        <a href="https://toyyibpay.com/Susu-Kambing-Coklat-RM69" target="_blank" class="btn btn-primary">Grab Yours! ✨</a>
                     </div>
                 </div>
             </div>
@@ -276,10 +271,10 @@
     <!-- CTA SECTION -->
     <section class="cta-section">
         <div class="container">
-            <h2>Need Help Choosing?</h2>
-            <p>Our team is happy to help you find the perfect products for your child</p>
+            <h2>✨ Ready for the Adventure?</h2>
+            <p>Can't decide? Our friendly team is here to help you find the perfect products!</p>
             <a href="https://wa.link/tf4t9o" target="_blank" class="btn btn-secondary">
-                <i class="fab fa-whatsapp"></i> Chat with Us
+                <i class="fab fa-whatsapp"></i> Let's Chat! 💬
             </a>
         </div>
     </section>
