Redesign homepage, about, and contact pages with playful, kid-friendly content and emojis

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
     <!-- ABOUT HERO -->
     <section class="about-hero">
         <div class="container">
-            <h1>Made for Kids. Inspired by Imagination</h1>
-            <p>Designing colourful brain-boosting tools for meaningful growth</p>
+            <h1>🌟 Meet the Thinky Fun Kids Family!</h1>
+            <p>✨ We Make Learning So Cool, Kids Don't Even Realize They're Getting Smarter ✨</p>
         </div>
     </section>
 
@@ -46,9 +46,9 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-text">
-                    <h2>Our Story</h2>
-                    <p>At Thinky Fun Kids, we believe learning should be joyful, not stressful. We were inspired to create products that turn playtime into meaningful growth moments.</p>
-                    <p>Every product is thoughtfully designed with child development experts and parents in mind. We understand that kids don't learn best when they're forced to sit and study—they learn best when they're having fun!</p>
+                    <h2>🎨 Our Magical Story</h2>
+                    <p>Once upon a time, we asked ourselves: <strong>"What if learning was actually FUN?"</strong> 🤔 That's when Thinky Fun Kids was born! We believe every kid is a genius waiting to discover their superpowers.</p>
+                    <p>We're not just making products—we're creating <strong>magical moments</strong> where play becomes learning, creativity becomes confidence, and smiles become memories! 🌈 Every single thing we create is inspired by the question: <strong>"Will this make kids go CRAZY with joy?"</strong></p>
                 </div>
                 <div class="about-image">
                     <img src="images/about-illustration.svg" alt="About us - creativity and learning values" class="about-img">
@@ -60,40 +60,41 @@
                     <img src="images/about-illustration.svg" alt="Our mission - child development and growth" class="about-img">
                 </div>
                 <div class="about-text">
-                    <h2>Our Mission</h2>
-                    <p>To make learning joyful, play meaningful, and every child feel confident. We're committed to providing safe, creative, and developmentally appropriate products that help children:</p>
+                    <h2>🚀 Our Secret Mission</h2>
+                    <p>We're on a mission to turn every kid into a <strong>SUPER BRAIN</strong> while they're having the time of their lives! 🎉 Our promise? Learning that feels like play, every single time!</p>
                     <ul class="mission-list">
-                        <li>✨ Discover their potential</li>
-                        <li>🧩 Develop critical thinking skills</li>
-                        <li>🎨 Express their creativity freely</li>
-                        <li>💪 Build self-confidence and resilience</li>
-                        <li>🌟 Have FUN while learning</li>
+                        <li>🌟 Unlock hidden superpowers and talents</li>
+                        <li>🧠 Build genius-level thinking (sneakily!)</li>
+                        <li>🎨 Let creativity run WILD and free</li>
+                        <li>💪 Create confident little legends</li>
+                        <li>🎊 Make learning an ADVENTURE, not a chore</li>
+                        <li>❤️ Keep it safe, fun, and family-friendly always</li>
                     </ul>
                 </div>
             </div>
 
             <div class="values-section">
-                <h2 class="section-title">Our Core Values</h2>
+                <h2 class="section-title">💎 What Makes Us Different?</h2>
                 <div class="values-grid">
                     <div class="value-card">
-                        <div class="value-icon">🌱</div>
-                        <h3>Child-Centered</h3>
-                        <p>Every decision starts with what's best for children's development and happiness</p>
+                        <div class="value-icon">👶</div>
+                        <h3>Kids First, Always!</h3>
+                        <p>We think like kids and create like parents! Every product is tested by actual kids to make sure it's AWESOME.</p>
                     </div>
                     <div class="value-card">
-                        <div class="value-icon">♻️</div>
-                        <h3>Sustainable</h3>
-                        <p>Eco-friendly materials and practices that care for our planet</p>
+                        <div class="value-icon">🌍</div>
+                        <h3>Planet-Loving Creators</h3>
+                        <p>We care for Mother Earth! Eco-friendly materials so we can leave a beautiful world for our future geniuses.</p>
                     </div>
                     <div class="value-card">
-                        <div class="value-icon">❤️</div>
-                        <h3>Quality & Love</h3>
-                        <p>We pour care and attention into every product we create</p>
+                        <div class="value-icon">✨</div>
+                        <h3>Made with Magic ✨</h3>
+                        <p>Every single product is crafted with LOVE, PASSION, and PIZZAZZ! You can feel the joy in everything we make.</p>
                     </div>
                     <div class="value-card">
-                        <div class="value-icon">🤝</div>
-                        <h3>Community</h3>
-                        <p>Building a supportive community of parents and educators</p>
+                        <div class="value-icon">🎉</div>
+                        <h3>Awesome Community Vibes</h3>
+                        <p>Join thousands of happy families! We're building a movement of creative kids and supportive parents together.</p>
                     </div>
                 </div>
             </div>
@@ -103,12 +104,12 @@
     <!-- CTA SECTION -->
     <section class="cta-section">
         <div class="container">
-            <h2>Join Our Community</h2>
-            <p>Be part of a movement making learning fun for kids everywhere</p>
+            <h2>🌈 Ready to Join the Adventure?</h2>
+            <p>Be a part of our AWESOME family where learning feels like playtime! 🎊</p>
             <div class="cta-buttons">
-                <a href="shop.html" class="btn btn-primary">Explore Products</a>
+                <a href="shop.html" class="btn btn-primary">🛍️ Start the Fun Adventure!</a>
                 <a href="https://wa.link/tf4t9o" target="_blank" class="btn btn-secondary">
-                    <i class="fab fa-whatsapp"></i> Connect with Us
+                    <i class="fab fa-whatsapp"></i> 💬 Let's Chat!
                 </a>
             </div>
         </div>
