--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
     <!-- CONTACT HERO -->
     <section class="contact-hero">
         <div class="container">
-            <h1>Get In Touch</h1>
-            <p>Have questions? We'd love to hear from you!</p>
+            <h1>Let's Chat!</h1>
+            <p>Got questions? Want to say hi? We LOVE hearing from our awesome Thinky Fun Kids family!</p>
         </div>
     </section>
 
@@ -56,10 +56,10 @@
                             <i class="fab fa-whatsapp"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>WhatsApp</h3>
-                            <p>Quick replies and support</p>
+                            <h3>WhatsApp - The Super Fast Way!</h3>
+                            <p>Get instant replies and chat like friends. Ask anything anytime!</p>
                             <a href="https://wa.link/tf4t9o" target="_blank" class="btn btn-secondary">
-                                <i class="fab fa-whatsapp"></i> Chat on WhatsApp
+                                <i class="fab fa-whatsapp"></i> Let's Chat on WhatsApp
                             </a>
                         </div>
                     </div>
@@ -69,8 +69,8 @@
                             <i class="fas fa-envelope"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Email</h3>
-                            <p>For detailed inquiries</p>
+                            <h3>Email - The Thoughtful Way</h3>
+                            <p>Send us a longer message or detailed question. We read every single one!</p>
                             <a href="mailto:hello@thinkyfunkids.com">hello@thinkyfunkids.com</a>
                         </div>
                     </div>
@@ -80,50 +80,60 @@
                             <i class="fas fa-clock"></i>
                         </div>
                         <div class="contact-details">
-                            <h3>Response Time</h3>
-                            <p>We typically respond within 24 hours</p>
+                            <h3>Lightning-Fast Response Time</h3>
+                            <p>We jump on your message within 24 hours (usually much faster!) because you're awesome and deserve quick answers!</p>
                         </div>
                     </div>
 
                     <div class="faq-section">
-                        <h3>Frequently Asked Questions</h3>
+                        <h3>Questions Kids & Parents Always Ask (And Answers!)</h3>
                         <div class="faq-item">
                             <button class="faq-question">
-                                How long does delivery take?
+                                How speedy is the delivery?
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <div class="faq-answer">
-                                <p>Delivery typically takes 3-7 business days depending on your location.</p>
+                                <p>Your package zooms through to you in 3-7 business days! We can't wait for you to start the fun!</p>
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <button class="faq-question">
-                                Are your products safe for children?
+                                Are the products REALLY safe for my little genius?
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <div class="faq-answer">
-                                <p>Yes! All our products are made with non-toxic, eco-friendly materials and meet international safety standards.</p>
+                                <p>The SAFEST! All our products use non-toxic, eco-friendly materials and pass ALL international safety tests. We treat every product like we're giving it to our own kids!</p>
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <button class="faq-question">
-                                Do you offer bulk discounts?
+                                Do you do bulk discounts for schools?
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <div class="faq-answer">
-                                <p>Yes! Contact us via WhatsApp for special bulk pricing for schools and institutions.</p>
+                                <p>YES! Let's chat on WhatsApp about special pricing for schools and institutions. We'd LOVE to bring Thinky Fun Kids to more classrooms!</p>
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <button class="faq-question">
-                                Can I return products?
+                                What if my kiddo doesn't love it? Can I return it?
                                 <i class="fas fa-chevron-down"></i>
                             </button>
                             <div class="faq-answer">
-                                <p>We have a 30-day money-back guarantee if you're not satisfied with your purchase.</p>
+                                <p>Absolutely! You have 30 days to try it. If it's not a perfect fit, we'll give your money back. No stress, no fuss, just love!</p>
+                            </div>
+                        </div>
+
+                        <div class="faq-item">
+                            <button class="faq-question">
+                                Do you have birthday discounts for parties?
+                                <i class="fas fa-chevron-down"></i>
+                            </button>
+                            <div class="faq-answer">
+                                <p>You betcha! Drop us a WhatsApp about birthday party packages and special bulk orders. We help make celebrations EXTRA special!</p>
                             </div>
                         </div>
                     </div>
@@ -135,9 +145,9 @@
     <!-- CTA SECTION -->
     <section class="cta-section">
         <div class="container">
-            <h2>Ready to Start the Fun?</h2>
-            <p>Join hundreds of happy kids and parents</p>
-            <a href="shop.html" class="btn btn-primary">Shop Now</a>
+            <h2>Ready to Jump Into the Adventure?</h2>
+            <p>Browse our AMAZING collection and start the fun today!</p>
+            <a href="shop.html" class="btn btn-primary">Explore All the Cool Stuff</a>
         </div>
     </section>
 
