--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">Hi, Kids & Parents 👋</h1>
-            <p class="hero-subtitle">We create <span class="highlight-text">fun, thinky</span>, imagination-boosting products specially designed to help children <span class="highlight-text">learn, grow, and shine</span> — while giving parents peace of mind.</p>
+            <h1 class="hero-title">🎉 Hey Kids & Parents!</h1>
+            <p class="hero-subtitle">Welcome to the world of <span class="highlight-text">magical learning</span> where playtime = learning time! We create <span class="highlight-text">super fun</span> activities that make kids smile, laugh, and grow <span class="highlight-text">smarter every day</span>! 🌟</p>
             <p class="hero-mission">
                 <span class="mission-icon">✨</span> 
-                <span class="mission-text">Make <span class="mission-highlight">learning joyful</span>, make <span class="mission-highlight">play meaningful</span>, and make every child feel <span class="mission-highlight">confident</span>.</span>
+                <span class="mission-text">Our mission: Make <span class="mission-highlight">learning a joyful adventure</span>, keep <span class="mission-highlight">play full of meaning</span>, and help every kid feel <span class="mission-highlight">amazingly confident</span>!</span>
             </p>
-            <a href="shop.html" class="btn btn-primary btn-large">Shop Now</a>
+            <a href="shop.html" class="btn btn-primary btn-large">🎮 Start the Adventure! →</a>
         </div>
         <div class="hero-image">
             <img src="images/hero-illustration.svg" alt="Happy kids learning and playing" class="hero-img">
@@ -52,27 +52,27 @@
     <!-- PROMISE SECTION -->
     <section class="promise-section">
         <div class="container">
-            <h2 class="section-title">Our Promise to Parents</h2>
+            <h2 class="section-title">🌈 Why Parents Love Us</h2>
             <div class="promise-grid">
                 <div class="promise-card">
-                    <div class="promise-icon">🛡️</div>
-                    <h3>100% Safe Materials</h3>
-                    <p>Non-toxic, eco-friendly products designed with safety in mind</p>
+                    <div class="promise-icon">✅</div>
+                    <h3>100% Safe & Tested</h3>
+                    <p>All products are non-toxic, eco-friendly, and made with love for your precious ones!</p>
                 </div>
                 <div class="promise-card">
                     <div class="promise-icon">🎨</div>
-                    <h3>Boost Creativity</h3>
-                    <p>Open-ended fun activities that spark imagination and innovation</p>
+                    <h3>Creativity Explosion!</h3>
+                    <p>Open-ended fun that sparks imagination and brings out your kid's inner artist!</p>
                 </div>
                 <div class="promise-card">
                     <div class="promise-icon">🧠</div>
-                    <h3>Brain Development</h3>
-                    <p>Scientifically designed to enhance cognitive and motor skills</p>
+                    <h3>Brain-Boosting Magic</h3>
+                    <p>Fun activities that naturally enhance thinking skills and motor development!</p>
                 </div>
                 <div class="promise-card">
-                    <div class="promise-icon">💪</div>
-                    <h3>Build Confidence</h3>
-                    <p>Help children succeed and feel proud of their achievements</p>
+                    <div class="promise-icon">⭐</div>
+                    <h3>Confidence Builder</h3>
+                    <p>Watch your kids beam with pride as they complete each fun challenge!</p>
                 </div>
             </div>
         </div>
@@ -81,22 +81,22 @@
     <!-- WHY KIDS LOVE IT SECTION -->
     <section class="why-section">
         <div class="container">
-            <h2 class="section-title">Why Kids Love It</h2>
+            <h2 class="section-title">🎯 Why Kids Go Crazy for It</h2>
             <div class="why-grid">
                 <div class="why-card">
-                    <div class="why-number">01</div>
-                    <h3>Fun & Engaging</h3>
-                    <p>Yummy colours and cool activities that keep them entertained for hours</p>
+                    <div class="why-number">😄</div>
+                    <h3>It's Ridiculously Fun!</h3>
+                    <p>Bright colors, cool activities, and non-stop entertainment that keeps smiles going!</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-number">02</div>
-                    <h3>Learn While Playing</h3>
-                    <p>No pressure learning - education disguised as pure fun</p>
+                    <div class="why-number">🎮</div>
+                    <h3>Learn = Play = Win!</h3>
+                    <p>Zero pressure, maximum fun – learning sneaks in while they're having a blast!</p>
                 </div>
                 <div class="why-card">
-                    <div class="why-number">03</div>
-                    <h3>Feel Like Winners</h3>
-                    <p>Achievable challenges that make kids feel accomplished and smart</p>
+                    <div class="why-number">🏆</div>
+                    <h3>I Feel Like a Superstar!</h3>
+                    <p>Challenges that are just right, making every kid feel like a champion!</p>
                 </div>
             </div>
         </div>
@@ -105,12 +105,12 @@
     <!-- CTA SECTION -->
     <section class="cta-section">
         <div class="container">
-            <h2>Ready to Make Learning Fun?</h2>
-            <p>Join thousands of happy kids and parents already enjoying Thinky Fun Kids</p>
+            <h2>🚀 Ready to Begin the Adventure?</h2>
+            <p>Join thousands of happy kids and parents creating amazing memories together!</p>
             <div class="cta-buttons">
-                <a href="shop.html" class="btn btn-primary">Shop Our Products</a>
+                <a href="shop.html" class="btn btn-primary">✨ Explore Now ✨</a>
                 <a href="https://wa.link/tf4t9o" target="_blank" class="btn btn-secondary">
-                    <i class="fab fa-whatsapp"></i> Ask Questions
+                    <i class="fab fa-whatsapp"></i> Let's Chat!
                 </a>
             </div>
         </div>
